Fix layout: add bottom padding to footer for correct vertical spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -337,7 +337,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   align-items: start;
-  padding: 67px 50px 0 50px;
+  padding: 67px 50px 90px;
 }
 
 .footer__address {
